[project]
name = "API-game"
version = "0.1.0"
description = "A threat intelligence terminal game. Guess the IP, avoid the kraken."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.scripts]
API-game = "game:play"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["game.py", "kraken.py", "api.py"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.4",
]
